# caeneus

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  native-release.yml
benchmarks/: README.md  common.sh  generate_graphs.py  pyproject.toml  run-all.sh  run-go.sh  run-node.sh  run-python.sh  run-zig.sh
ext/: README.md
ext/go/: README.md  caeneus.go  client_test.go  go.mod
ext/go/benchmarks/: bench_test.go  go.mod  go.sum
ext/go/cmd/caeneus-native/: main.go  main_test.go
ext/node/: README.md  benchmark.ts  binding.cpp  binding.gyp  binding_fast.cpp  index.ts  package-lock.json  package.json  tsconfig.json  v8-fast-api-calls.h
ext/node/scripts/: build-prebuild.js  install.js
ext/node/test/: smoke.ts
ext/python/: MANIFEST.in  README.md  benchmark.py  benchmark_multithread.py  build_native.py  caeneusmodule.c  pyproject.toml  setup.py  test_caeneus.py
include/: caeneus.h
src/: common.zig  engine.zig  ffi.zig  main.zig  root.zig  shard.zig  slab.zig
tools/: check-release-version.py  native-targets.json  stage-native.py
